# ai-operations-copilot

./: .env.example  .gitignore  CODEBASE_OVERVIEW.md  KNOWN_LIMITATIONS.md  PROJECT_CONTEXT.md  PROJECT_STATUS.md  README.md  REPOSITORY_INDEX.md  progress.txt  pyproject.toml  tests.json
agents/: __init__.py  base.py
agents/action/: __init__.py
agents/decision/: __init__.py
agents/knowledge/: __init__.py
agents/monitoring/: __init__.py
agents/triage/: __init__.py  prompts.py  schema.py
backend/: __init__.py
backend/api/: __init__.py  main.py
backend/core/: __init__.py  config.py  exceptions.py
backend/schemas/: __init__.py  agent.py  ticket.py  workflow.py
backend/services/: __init__.py  llm.py  vector_store.py
data/documents/: README.md
data/logs/: README.md
data/tickets/: README.md  progress.txt
docs/: SYSTEM_ARCHITECTURE_REPORT.md  agents.md  architecture.md  data_flow.md  project_status_report.md  system_overview.md
evaluation/: EVALUATION.md  __init__.py  evaluators.py  versioning.py
evaluation/datasets/: __init__.py
evaluation/quality/: QUALITY.md  __init__.py  calibration.py  regression.py  signals.py  thresholds.py
evaluation/reports/: __init__.py
evaluation/runners/: __init__.py
observability/: __init__.py  metrics.py  tracing.py
orchestration/: __init__.py
orchestration/langgraph/: __init__.py  edges.py  nodes.py  state.py  workflow.py
tests/: __init__.py  conftest.py  dry_run_triage.py  dry_run_workflow.py  shadow_run_triage.py
tests/fixtures/: incident_ticket.json
tests/integration/: __init__.py  test_api.py
tests/mocks/: __init__.py  llm_service.py
(+84 files in other folders)
